feat: 将/auth/**接口列表也更新到"接口列表.md"

--- a/docs/api/接口列表.md
+++ b/docs/api/接口列表.md
@@ -1,4 +1,10 @@
-# 接口列表（根据 sys.json 生成）
+# 接口列表（根据 sys.json 和 auth.api 生成）
+
+## 认证服务
+GET    /auth/code                                       生成验证码
+POST   /auth/login                                      登录方法
+GET    /auth/tenant/list                                登录页面租户下拉框
+POST   /auth/logout                                     退出登录
 
 ## 个人信息 业务处理
 GET    /system/user/profile                               个人信息
@@ -183,4 +189,4 @@ DELETE /system/dept/{deptId}                              删除部门
 
 ---
 
-**总计: 143 个接口**
+**总计: 147 个接口**
