feat: 支持SSE（Server-Sent Events）功能

--- a/docs/api/接口列表.md
+++ b/docs/api/接口列表.md
@@ -6,6 +6,10 @@ POST   /auth/login                                      登录方法
 GET    /auth/tenant/list                                登录页面租户下拉框
 POST   /auth/logout                                     退出登录
 
+## 资源服务 (SSE)
+GET    /resource/sse                                    建立 SSE 连接
+GET    /resource/sse/close                              关闭 SSE 连接
+
 ## 个人信息 业务处理
 GET    /system/user/profile                               个人信息
 PUT    /system/user/profile                               修改用户信息
@@ -189,4 +193,4 @@ DELETE /system/dept/{deptId}                              删除部门
 
 ---
 
-**总计: 147 个接口**
+**总计: 149 个接口**
